[feat] add magicNumber url to create boards/double dummy tables